dev: added components

--- a/index.html
+++ b/index.html
@@ -9,15 +9,8 @@
   <title>CMS Vanilla</title>
 </head>
 <body>
-  <header class="header">
-    Header
-  </header>
-    <main class="main">
-      Main
-    </main>
-  <footer class="footer">
-    Footer
-  </footer>
-<script src="index.js"></script>
+<script src="./components/Header"></script>
+<script src="./components/Main"></script>
+<script src="./components/Footer"></script>
 </body>
 </html>
