dev: added logo in nav

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <title>CMS Vanilla</title>
 </head>
 <body>
-<script src="./components/Header"></script>
-<script src="./components/Main"></script>
-<script src="./components/Footer"></script>
+  <script src="./index.js"></script>
+  <script src="./components/Header"></script>
+  <script src="./components/Main"></script>
+  <script src="./components/Footer"></script>
 </body>
 </html>
